# lib-of-babel

./: .gitignore  .mise.toml  Cargo.toml  README.md
.github/workflows/: check.yml  config-integrity.yml  deploy.yml
assets/: sigils.json
data/: README.md
data/alphabets/: README.md  amharic.txt  bengali.txt  chinese.txt  chinese_trad.txt  gujarati.txt  hindi.txt  kannada.txt  khmer.txt  korean.txt  malayalam.txt  odia.txt  punjabi.txt  tamil.txt  telugu.txt  thai.txt  vietnamese.txt
docs/: alphabets.md  design.md  development.md
scripts/: check-alphabet-packs.sh  check-config-sizes.sh  gen-alphabet-packs.py  make-og.mjs  make-sigil-sheet.mjs  test-fold-page-scope.mjs  test-png-babel.mjs  write-health.mjs
src/: basile.rs  color.rs  config.rs  feistel.rs  gallery.rs  lib.rs  page.rs  prng.rs  prospect.rs  search.rs  search_segment.rs  universe.rs  utils.rs  wasm_api.rs
src/basile/: digits.rs  engine.rs  mod.rs  pairing.rs  scramble.rs  tests.rs
src/config/: ids.rs  mod.rs  registry.rs  tables.rs
src/mosaic/: api.rs  candidates.rs  find.rs  flat.rs  lab.rs  mod.rs  project.rs  score.rs  tests.rs  util.rs
src/search/: mod.rs  segment.rs
web/: CNAME  asset-sheet.html  index.html  main.js
web/asset-sheet/: index.html  sheet.css
web/asset-sheet/js/: boot.js  includes.js  paint.js
web/asset-sheet/sections/: about.html  chrome.html  compare.html  controls.html  dialogs.html  find.html  mbit.html  stage.html  tokens.html  type.html
web/css/: app.css  base.css  chrome.css  dialogs.css  gallery.css
web/fonts/: OFL.txt
web/js/: about.js  alphabet-picker.js  book.js  constants.js  controls.js  favicon.js  find.js  i18n.js  nav.js  prospect-batch.js  prospect-worker.js  search.js  sigil.js  state.js  url.js  util.js  verify.js  view.js  wasm.js
web/js/about/: about.js
web/js/chrome/: alphabet-picker.js  controls.js  dropdown.js  favicon.js  loading-wave.js  theme.js
web/js/gallery/: mbit-notice.js  migrate.js  nav.js  sigil.js  (+3 more)
(+28 files in other folders)
