[package]
name = "lib-of-babel"
version = "0.1.0"
edition = "2024"
authors = ["Alexander Hurowitz <latkaindustries@gmail.com>"]
description = "A living, walkable Library of Babel: deterministic Rust->WASM gallery generator with cryptographic per-gallery fingerprints."
license = "GPL-3.0-only"
repository = "https://github.com/Latka-Industries/lib-of-babel"
publish = false

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2"
blake3 = { version = "1", default-features = false }

[profile.release]
opt-level = "s"
lto = true
codegen-units = 1
panic = "abort"
